--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Aula01</name>
+	<name>blinky_2</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -70,11 +70,24 @@
 			<type>1</type>
 			<locationURI>copy_PARENT/common/source/F2837xD_usDelay.asm</locationURI>
 		</link>
+		<link>
+			<name>blinky_cpu01.c</name>
+			<type>1</type>
+			<locationURI>copy_PARENT1/blinky_cpu01.c</locationURI>
+		</link>
 	</linkedResources>
 	<variableList>
 		<variable>
+			<name>INSTALLROOT_F2837XD</name>
+			<value>$%7BPARENT-4-PROJECT_LOC%7D</value>
+		</variable>
+		<variable>
 			<name>copy_PARENT</name>
 			<value>$%7BTI_PRODUCTS_DIR%7D/c2000/C2000Ware_5_00_00_00/device_support/f2837xd</value>
+		</variable>
+		<variable>
+			<name>copy_PARENT1</name>
+			<value>$%7Bcopy_PARENT%7D/examples/cpu1/blinky/cpu01</value>
 		</variable>
 	</variableList>
 </projectDescription>
